--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html {
     background-color: #434343;
     color: #F3F3F3;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.05em;
 }
 
 h1 {
@@ -10,13 +11,12 @@ h1 {
 }
 
 table {
-    font-size: medium;
     border: 1px solid #F3F3F3;
     margin-left: 1em;
 }
 
 th {
-    font-size: large;
+    font-size: 1.1em;
 }
 
 td {
@@ -26,6 +26,15 @@ td {
 .faction-table-section {}
 
 .faction-table {
+    display: inline-block;
+    vertical-align: top;
+}
+
+details {
+    border: 1px solid #F3F3F3;
+}
+
+.influence-shift {
     display: inline-block;
     vertical-align: top;
 }
