--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,29 @@ h1 {
 table {
     border: 1px solid #F3F3F3;
     margin-left: 1em;
+    padding: 2px;
 }
 
 th {
-    font-size: 1.1em;
+    font-size: 1.2em;
+}
+
+tr:hover {
+    font-weight: bold;
 }
 
 td {
     border: 1px solid #F3F3F3;
+    padding: 4px;
 }
+
+/*
+.country {}
+
+.country:hover {
+    cursor: pointer;
+}
+*/
 
 .faction-table-section {}
 
@@ -32,6 +46,16 @@ td {
 
 details {
     border: 1px solid #F3F3F3;
+    padding: 4px;
+}
+
+summary {
+    font-size: 1.2em;
+}
+
+summary:hover {
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .influence-shift {
