--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html {
     background-color: #434343;
     color: #F3F3F3;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.05em;
+    font-size: 1.05rem;
 }
 
 h1 {
@@ -17,7 +17,13 @@ table {
 }
 
 th {
-    font-size: 1.2em;
+    font-size: 1.2rem;
+}
+
+.faction-modifier {
+    font-size: 1rem;
+    font-weight: 100;
+    font-style: italic;
 }
 
 tr:hover {
@@ -50,7 +56,7 @@ details {
 }
 
 summary {
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 
 summary:hover {
